--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
          <span><a href="#">Mission</a></span><span><a href="#">Featured Tea</a></span><span><a href="#">Locations</a></span>
        </div>
     </header>
+  <div class="mission">
+    <div class="mission-image">
+      <div class="mission-word">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </div>
+    </div>
 
+  </div>
   </body>
 </html>
