--- a/index.html
+++ b/index.html
@@ -3,26 +3,56 @@
   <head>
     <meta charset="utf-8">
     <title>Tea Cozy</title>
-    <link rel="stylesheet" href="./resources/css/style.css">
+  <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="./resources/images/tea-cozy-logo.png" alt="logo">
-          </div>
-          <div class="nav">
-         <span><a href="#">Mission</a></span><span><a href="#">Featured Tea</a></span><span><a href="#">Locations</a></span>
-       </div>
+   <div class="logo">
+     <img src="./resources/images/tea-cozy-logo.png" alt="logo">
+   </div>
+   <div class="nav">
+     <span><a href="#">Mission</a></span><span><a href="#">Featured Tea</a></span><span><a href="#">Locations</a></span>
+
+   </div>
     </header>
-  <div class="mission">
-    <div class="mission-image">
-      <div class="mission-word">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-      </div>
+   <div class="mission">
+     <div class="mission-pic">
+       <div class="mission-words">
+       <h2>Our Mission</h2>
+       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+   </div>
+     </div>
+   </div>
+   <div class ="menu">
+  <div class="menu-words">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy?</h4  >
     </div>
+    <div class="teas">
+      <div class="types">
+        <div class="item">
+          <img src="./resources/images/berryblitz.jpg" alt="berry">
+          <span>Fall Berry Blitz Tea</span>
+        </div>
+        <div class="item">
+          <img src="./resources/images/spiced-rum.jpg" alt="rum">
+          <span>Spiced Rum</span>
+        </div>
+        <div class="item">
+          <img src="./resources/images/donut.jpg" alt="donut">
+          <span>Seasonal Donuts</span>
+        </div>
+        <div class="item">
+          <img src="./resources/images/myrtle-ave.jpg" alt="myrtle">
+          <span>Myrtle Ave Tea</span>
+        </div>
+        <div class="item">
+          <img src="./resources/images/bedford-bizarre.jpg" alt="bedford">
+          <span>Bedford Bizarre Tea</span>
+        </div>
+      </div>
     </div>
 
   </div>
+
   </body>
-</html>
